manifests/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erfan-resume
  namespace: web
  labels:
    app: erfan-resume
spec:
  replicas: 1
  selector:
    matchLabels:
      app: erfan-resume
  template:
    metadata:
      labels:
        app: erfan-resume
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          volumeMounts:
            - name: resume-content
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: resume-content
          configMap:
            name: erfan-resume-content
