manifests/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erfan-resume
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "erfan-resume-ip"
    networking.gke.io/managed-certificates: "erfan-resume-cert"
    networking.gke.io/v1beta1.FrontendConfig: "erfan-resume-frontend"
spec:
  rules:
    - host: resume.erfan-us.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: erfan-resume
                port:
                  number: 80
